--- a/Tutorial 2/Tutorial 2.vcxproj
+++ b/Tutorial 2/Tutorial 2.vcxproj
@@ -43,7 +43,7 @@
     <ProjectGuid>{E9ECB82F-6C38-43C2-A5D4-0F1DDAC723AE}</ProjectGuid>
     <RootNamespace>Workshop1</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
-    <ProjectName>Tutorial 2</ProjectName>
+    <ProjectName>CGP3012M Physics Simulation Assignment 1 - Antony Scott 25295522</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
